force-app/zurich-base/main/default/objects/Policy__c/Policy__c.object-meta.xml
<CustomObject>
    <description>Destinado a almacenar la información de las pólizas provenientes de INFO</description>
    <label>Póliza</label>
    <nameField>
        <label>Policy Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pólizas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>