force-app/zurich-base/main/default/objects/Policy__c/fields/AccidentRate__c.field-meta.xml
<CustomField>
    <fullName>AccidentRate__c</fullName>
    <inlineHelpText>Valor de los últimos 3 años</inlineHelpText>
    <label>Accident Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>