force-app/zurich-base/main/default/objects/Policy__c/fields/AssetIdentifier__c.field-meta.xml
<CustomField>
    <fullName>AssetIdentifier__c</fullName>
    <description>Campo Identifier del objeto Asset vinculado</description>
    <label>Asset Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>