force-app/zurich-base/main/default/objects/Policy__c/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <description>(OCS). Identifica el bonus de la póliza en INFO</description>
    <label>Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>