force-app/zurich-base/main/default/objects/Policy__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>(OCS). Identifica la fecha de vencimiento de la póliza</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>