force-app/zurich-base/main/default/objects/Policy__c/fields/ExternalCollaboratorPolicy__c.field-meta.xml
<CustomField>
    <fullName>ExternalCollaboratorPolicy__c</fullName>
    <label>Colaborador Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>