force-app/zurich-base/main/default/objects/Policy__c/fields/InfoCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>InfoCreatedDate__c</fullName>
    <description>ZE OCS. Fecha de emisión de la póliza en INFO</description>
    <label>INFO Created Date</label>
    <type>Date</type>
</CustomField>