force-app/zurich-base/main/default/objects/Policy__c/fields/InfoPolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>InfoPolicyNumber__c</fullName>
    <description>(OCS). Identificador único de la póliza.</description>
    <externalId>true</externalId>
    <label>INFO Policy Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>