force-app/zurich-base/main/default/objects/Policy__c/fields/InfoQuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>InfoQuoteNumber__c</fullName>
    <label>Quote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>