force-app/zurich-base/main/default/objects/Policy__c/fields/InfoUser__c.field-meta.xml
<CustomField>
    <fullName>InfoUser__c</fullName>
    <description>ZE OCS. Usuario que ha modificado por última vez el registro en INFO</description>
    <label>INFO User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>