force-app/zurich-base/main/default/objects/Policy__c/fields/Intermediary_Code__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_Code__c</fullName>
    <description>(OCS). Identifica al Mediador o Partner asociado a la oferta</description>
    <label>Intermediary Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>