force-app/zurich-base/main/default/objects/Policy__c/fields/IntermediaryId__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS). Identifica el nombre del intermediario ya sea partner o mediador</description>
    <label>Intermediary</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>