force-app/zurich-base/main/default/objects/Policy__c/fields/IntermediaryNameForm__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryNameForm__c</fullName>
    <formula>IntermediaryId__r.IntermediaryDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intermediary Name</label>
    <type>Text</type>
</CustomField>