force-app/zurich-base/main/default/objects/Policy__c/fields/IntermediaryVisibilityAcc__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryVisibilityAcc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Registro de Cuenta Mediador asociado a la Póliza que determina la visibilidad del usuario:

    - Si existe Agrupación y esta tiene definida que se use la Cuenta Mediador-padre: Cuenta Mediador-padre de la Agrupación

    - Sino: Valor del campo IntermediaryId__c</description>
    <label>Intermediary Visibility Acc</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Intermediary Visibility)</relationshipLabel>
    <relationshipName>IntermediariesPoliciesVisibility</relationshipName>
    <type>Lookup</type>
</CustomField>