force-app/zurich-base/main/default/objects/Policy__c/fields/IntermediaryVisibilityForm__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryVisibilityForm__c</fullName>
    <description>Campo fórmula para recalcular visibilidad en ZRM</description>
    <formula>IF(PolicyHolder__r.Blocked__c, 
	IF(ISBLANK(IntermediaryVisibilityAcc__c), 
		&apos;AccountBlocked&apos;, 
		null
	), 
	IF(IntermediaryVisibilityAcc__c = IntermediaryId__c, 
		IF(ISBLANK(IntermediaryVisibilityAcc__c),
			&apos;WithoutIntermediary&apos;, 
			&apos;CurrentIntermediary&apos;
		), 
		IF(IntermediaryVisibilityAcc__c = IntermediaryId__r.IntermediaryGroup__r.IntermediaryWithUser__c, 
			&apos;MainIntermediary&apos;, 
			null
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intermediary Visibility Form</label>
    <type>Text</type>
</CustomField>