force-app/zurich-base/main/default/objects/Policy__c/fields/MovementReason__c.field-meta.xml
<CustomField>
    <fullName>MovementReason__c</fullName>
    <description>(OCS). Identifica el motivo del movimiento por el que se ha producido el cambio en la póliza</description>
    <label>Movement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A101</fullName>
            </value>
            <value>
                <fullName>A102</fullName>
            </value>
            <value>
                <fullName>A104</fullName>
            </value>
            <value>
                <fullName>A105</fullName>
            </value>
            <value>
                <fullName>A106</fullName>
            </value>
            <value>
                <fullName>A109</fullName>
            </value>
            <value>
                <fullName>A114</fullName>
            </value>
            <value>
                <fullName>A115</fullName>
            </value>
            <value>
                <fullName>A165</fullName>
            </value>
            <value>
                <fullName>A166</fullName>
            </value>
            <value>
                <fullName>A203</fullName>
            </value>
            <value>
                <fullName>A204</fullName>
            </value>
            <value>
                <fullName>A218</fullName>
            </value>
            <value>
                <fullName>A370</fullName>
            </value>
            <value>
                <fullName>A371</fullName>
            </value>
            <value>
                <fullName>A372</fullName>
            </value>
            <value>
                <fullName>A375</fullName>
            </value>
            <value>
                <fullName>A376</fullName>
            </value>
            <value>
                <fullName>A378</fullName>
            </value>
            <value>
                <fullName>A383</fullName>
            </value>
            <value>
                <fullName>A688</fullName>
            </value>
            <value>
                <fullName>A702</fullName>
            </value>
            <value>
                <fullName>A703</fullName>
            </value>
            <value>
                <fullName>A705</fullName>
            </value>
            <value>
                <fullName>A706</fullName>
            </value>
            <value>
                <fullName>A707</fullName>
            </value>
            <value>
                <fullName>A999</fullName>
            </value>
            <value>
                <fullName>B999</fullName>
            </value>
            <value>
                <fullName>C711</fullName>
            </value>
            <value>
                <fullName>D101</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>