force-app/zurich-base/main/default/objects/Policy__c/fields/MovementReasonCode__c.field-meta.xml
<CustomField>
    <fullName>MovementReasonCode__c</fullName>
    <description>Código del último movimiento de la póliza, este código viene desde INFO</description>
    <label>Movement Reason Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>