force-app/zurich-base/main/default/objects/Policy__c/fields/MovementStartDate__c.field-meta.xml
<CustomField>
    <fullName>MovementStartDate__c</fullName>
    <description>(OCS). Identifica la fecha de efecto de un movimiento</description>
    <label>Movement Start Date</label>
    <type>Date</type>
</CustomField>