force-app/zurich-base/main/default/objects/Policy__c/fields/NetPremium__c.field-meta.xml
<CustomField>
    <fullName>NetPremium__c</fullName>
    <description>(ZE). Identifica la prima total del producto sin impuestos
(OCS) Identifica la prima técnica de la póliza en INFO</description>
    <label>Net Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>