force-app/zurich-base/main/default/objects/Policy__c/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS). Identifica la oferta a la que se encuentra asociada la póliza</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>