force-app/zurich-base/main/default/objects/Policy__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Partner)</relationshipLabel>
    <relationshipName>PoliciesPartner</relationshipName>
    <type>Lookup</type>
</CustomField>