force-app/zurich-base/main/default/objects/Policy__c/fields/PolicyHolder__c.field-meta.xml
<CustomField>
    <fullName>PolicyHolder__c</fullName>
    <description>(OCS). Identifica el tomador de la póliza</description>
    <label>Policy Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Policy Holder)</relationshipLabel>
    <relationshipName>PoliciesHolder</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>