force-app/zurich-base/main/default/objects/Policy__c/fields/PolicyLink__c.field-meta.xml
<CustomField>
    <fullName>PolicyLink__c</fullName>
    <description>(OCS). Identifica el enlace a la póliza de INFO</description>
    <label>Policy Link</label>
    <type>Url</type>
</CustomField>