force-app/zurich-base/main/default/objects/Policy__c/fields/PolicyStatus__c.field-meta.xml
<CustomField>
    <fullName>PolicyStatus__c</fullName>
    <description>(OCS). Indica si la póliza está Cancelada, rehabilitada, saneada…</description>
    <label>Policy Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>