force-app/zurich-base/main/default/objects/Policy__c/fields/PolicyVersion__c.field-meta.xml
<CustomField>
    <fullName>PolicyVersion__c</fullName>
    <description>(OCS). Campo oculto usado en la integración para parsear el valor y copiarlo al campo Nombre del objeto Versión de Póliza</description>
    <label>Policy Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>