force-app/zurich-base/main/default/objects/Policy__c/fields/PotentialMatch__c.field-meta.xml
<CustomField>
    <fullName>PotentialMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Match</label>
    <type>Checkbox</type>
</CustomField>