force-app/zurich-base/main/default/objects/Policy__c/fields/ProductBranch__c.field-meta.xml
<CustomField>
    <fullName>ProductBranch__c</fullName>
    <formula>ProductId__r.GroupDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product branch</label>
    <type>Text</type>
</CustomField>