force-app/zurich-base/main/default/objects/Policy__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS). Identifica el producto para el que se realiza la póliza. En la web se (OCS) Identifica como Tipo de Registro</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>