force-app/zurich-base/main/default/objects/Policy__c/fields/ScopeId__c.field-meta.xml
<CustomField>
    <fullName>ScopeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(OCS). Identifica el ámbito al que se encuentra asociada la póliza</description>
    <label>Scope Name</label>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>