force-app/zurich-base/main/default/objects/Policy__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>(OCS). Identifica la fecha de efecto o inicio de la póliza</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>