force-app/zurich-base/main/default/objects/Policy__c/fields/SurhargeDiscount__c.field-meta.xml
<CustomField>
    <fullName>SurhargeDiscount__c</fullName>
    <description>(OCS). Identifica el recargo o descuento de la póliza en INFO</description>
    <label>Surcharge/Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>