force-app/zurich-base/main/default/objects/Policy__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <description>(OCS). Identifica los impuestos aplicados a la póliza en INFO</description>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>