force-app/zurich-base/main/default/objects/Policy__c/fields/TendencyToEscape__c.field-meta.xml
<CustomField>
    <fullName>TendencyToEscape__c</fullName>
    <label>Tendency To Escape</label>
    <length>255</length>
    <type>Text</type>
</CustomField>