force-app/zurich-base/main/default/objects/Policy__c/fields/TotalPremium__c.field-meta.xml
<CustomField>
    <fullName>TotalPremium__c</fullName>
    <description>(OCS). Identifica la prima total de la póliza en INFO</description>
    <label>Total Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>