force-app/zurich-base/main/default/objects/Policy__c/fields/TrimmedPolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>TrimmedPolicyNumber__c</fullName>
    <description>Número de póliza tras eliminar los ceros a la izquierda</description>
    <label>Short Policy Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>