force-app/zurich-base/main/default/objects/Policy__c/fields/VisibilityRetry__c.field-meta.xml
<CustomField>
    <fullName>VisibilityRetry__c</fullName>
    <description>[ZRM] en caso de error al procesar los cambios de mediador o cliente por el batch, se indica este número de reintentos para tener rastreabilidad de estos problemas y definir un número máximo de intentos para dicho registro y no se acumulen indefinidamente errores</description>
    <label>Visibility Retry</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>