force-app/zurich-base/main/default/objects/Policy__c/fields/Zrc__c.field-meta.xml
<CustomField>
    <fullName>Zrc__c</fullName>
    <inlineHelpText>Ultimo incremento de la póliza</inlineHelpText>
    <label>ZRC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>