force-app/zurich-base/main/default/objects/Policy__c/fields/ZRMMovementType__c.field-meta.xml
<CustomField>
    <fullName>ZRMMovementType__c</fullName>
    <description>[ZRM] campo que acompaña a LastDateIntermediaryOrAccountChange__c. Indica el tipo de movimiento que ha sufrido el registro para que el proceso batch identifque el cambio y haga los cálculos apropiados de ATM</description>
    <label>MovementType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IntermediaryChange</fullName>
            </value>
            <value>
                <fullName>AccountChange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>