force-app/zurich-base/main/default/objects/Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PolicyHolder__c</columns>
    <columns>ProductId__c</columns>
    <columns>BusinessName__c</columns>
    <columns>IntermediaryName__c</columns>
    <columns>TotalPremium__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>